# c_deep_learning

./: README.md
cml1-master/: CMakeLists.txt
cml1-master/include/: simple_nn.h
cml1-master/src/: main.cpp  simple_nn.cpp
cml10/: test.data  train.data
cml10/src/: main.cpp  nn.cpp  utils.cpp
cml12/: main.cpp
cml2-main/cml2-main/: CMakeLists.txt
cml2-main/cml2-main/include/: multiple_nn_out.h
cml2-main/cml2-main/src/: main.cpp  multiple_nn_out.cpp
cml3_/cml3-main/: CMakeLists.txt
cml3_/cml3-main/include/: multiple_nn_out.h
cml3_/cml3-main/src/: main.cpp  multiple_nn_out.cpp
cml4_/cml2-main/: CMakeLists.txt
cml4_/cml2-main/include/: hidden_nn.h
cml4_/cml2-main/src/: hidden_nn.cpp  main.cpp
cml5(error)/cml5-main/include/: hidden_nn.h
cml5(error)/cml5-main/src/: hidden_nn.cpp  main.cpp
cml6-master/cml6-master/: CMakeLists.txt
cml6-master/cml6-master/include/: brute_force.h
cml6-master/cml6-master/src/: brute_force.cpp  main.cpp
cml7(normal)/cml7-master/: CMakeLists.txt  README.md
cml7(normal)/cml7-master/include/: nn.h
cml7(normal)/cml7-master/src/: main.cpp  nn.cpp
cml8-master (1)/cml8-master/: CMakeLists.txt
cml8-master (1)/cml8-master/include/: rn.h
cml8-master (1)/cml8-master/src/: main.cpp  rn.cpp
cml9_/: CMakeLists.txt
cml9_/include/: nn.hpp  utils.hpp
cml9_/src/: main.cpp
